--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.5.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^3.4.2",
+    "babel-test": "^0.2.3",
+    "css-loader": "^3.6.0",
+    "jest": "^26.1.0",
     "live-server": "^1.2.1",
     "moment": "^2.26.0",
     "node-sass": "^4.13.1",
@@ -25,20 +31,23 @@
     "react": "^16.12.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^21.8.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-modal": "^3.11.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "uuid": "^8.1.0",
+    "style-loader": "^1.2.1",
+    "uuid": "^8.2.0",
     "validator": "^12.2.0",
-    "webpack": "^4.41.6",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^4.44.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "webpack-cli": "^3.3.11"
+    "regenerator-runtime": "^0.13.7",
+    "webpack-cli": "^3.3.12"
   }
 }
