--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "live-server public/",
     "build": "webpack",
     "dev-server": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -28,13 +28,15 @@
     "moment": "^2.26.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
-    "react": "^16.12.0",
+    "react": "^16.13.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-modal": "^3.11.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
