--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "live-server public/",
     "build": "webpack",
     "dev-server": "webpack-dev-server",
-    "test": "jest --watch"
+    "test": "jest --config=jest.config.json"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -23,11 +23,15 @@
     "babel-preset-react": "^6.24.1",
     "babel-test": "^0.2.3",
     "css-loader": "^3.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.5.0",
     "jest": "^26.1.0",
     "live-server": "^1.2.1",
     "moment": "^2.26.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
+    "raf": "^3.4.1",
     "react": "^16.13.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^21.8.0",
