--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "ISC",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
@@ -26,8 +27,10 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
-    "jest": "^26.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "jest": "^26.4.0",
     "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^0.10.0",
     "moment": "^2.26.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
