--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-**/node_modules
-./src/playcode
+node_modules
+src/playcode
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
