--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "__comment-for-start-command__": "start is needed in order to deploy to Heroku. When it finds this script, it runs node server",
+    "start": "node server/server.js"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -27,7 +29,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "express": "^4.17.1",
     "jest": "^26.4.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.10.0",
