--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/core": "^7.10.5"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.0.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
