--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^7.1.5",
@@ -23,12 +28,14 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-test": "^0.2.3",
     "css-loader": "^3.6.0",
     "express": "^4.17.1",
     "mini-css-extract-plugin": "^0.10.0",
     "moment": "^2.26.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "raf": "^3.4.1",
     "react": "^16.13.0",
     "react-addons-shallow-compare": "^15.6.2",
@@ -45,13 +52,7 @@
     "uuid": "^8.2.0",
     "validator": "^12.2.0",
     "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "babel-test": "^0.2.3",
-    "@babel/core": "^7.10.5"
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "@testing-library/react": "^11.0.4",
